[project]
name = "network-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.13",
    "langchain-experimental>=0.3.4",
    "langchain-groq>=0.3.2",
    "langgraph>=0.4.5",
    "mcp-use>=1.2.13",
    "streamlit>=1.45.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
